| Bug #7220 | information_schema: errors in "character_sets" | ||
|---|---|---|---|
| Submitted: | 13 Dec 2004 1:39 | Modified: | 14 Dec 2004 11:06 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.3-alpha-debug | OS: | Linux (SUSE 9.2) |
| Assigned to: | Sergei Glukhov | CPU Architecture: | Any |
[13 Dec 2004 1:39]
Peter Gulutzan
[14 Dec 2004 11:06]
Sergei Glukhov
Fixed in 5.0 source tree
