Fix for bug #7220: information_schema: errors in "character_sets"